--- a/backend/appengine/static/js/sites/site_list.html
+++ b/backend/appengine/static/js/sites/site_list.html
@@ -12,7 +12,7 @@
     <td>{_ site.id _}</td>
     <td><span ng-hide='site.editing' ng-click="editSite(site)">{_ site.domain _}</span>
             <span ng-show='site.editing' class="input-append">
-                    <input type="text" ng-model='site.domain'/>
+                    <input type="text" ng-model="site.domain"/>
                     <button class="btn btn-primary"
                             ng-click="updateSite(site)" ng-hide="site.saving">{_ saveLabel _}
                     </button>
